src/test/testFiles/invalid/semanticErrors/invalidPrimitiveAssignedToNull.val
let x: number = 5;
x = null;